<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:layout_marginHorizontal="@dimen/_10sdp"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:scaleType="centerCrop"
        android:tint="@color/primary"
        app:srcCompat="@drawable/ic_baseline_app_registration_24" />

    <ScrollView
        android:id="@+id/input_warper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_fistname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"

                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrapper_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="4dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/showPassword"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="36dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_view" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"

                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/contac_Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/contact_no"
                    android:inputType="phone"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_type"
                android:padding="@dimen/_5sdp"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />
            <RelativeLayout
                android:id="@+id/typelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="visible">



            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signin_link"
            android:textAllCaps="true"
            android:textColor="@color/primary_Dark"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>