<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_gravity="center"
       android:tint="@color/primary"
        app:srcCompat="@drawable/ic_baseline_login_24" />


    <ScrollView
        android:id="@+id/input_warper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wrapper_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="45dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrapper_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="4dp"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="#3a3a3a"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/showPassword"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="36dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_view" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signup_link"
                android:textColor="@color/primary_Dark"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="36dp"

                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>